design-everything-works-except-font

--- a/public/css/catalog-page.css
+++ b/public/css/catalog-page.css
@@ -411,6 +411,7 @@
 
 body {
   font-family: 'CERAPRO-REGULAR';
+  font-family: 'CERAPRO-REGULAR';
   background: #ffffff;
   padding: 0;
   margin: 0;
