--- a/public/css/index.css
+++ b/public/css/index.css
@@ -158,6 +158,7 @@
 
 body {
   font-family: 'CERAPRO-REGULAR';
+  font-family: 'CERAPRO-REGULAR';
   background: #ffffff;
   padding: 0;
   margin: 0;
