--- a/public/css/shopping-cart-page.css
+++ b/public/css/shopping-cart-page.css
@@ -157,6 +157,7 @@
 
 body {
   font-family: 'CERAPRO-REGULAR';
+  font-family: 'CERAPRO-REGULAR';
   background: #ffffff;
   padding: 0;
   margin: 0;
