--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -9,9 +9,9 @@
     font-weight:normal;
 }
 
-
 body{
     @include fontRegular;
+    font-family:'CERAPRO-REGULAR';
     background:#ffffff;
     padding: 0;
     margin:0;
