--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -3,7 +3,7 @@
 @import "mixins";
 
 @import "0-plugins/plugins-index";
-@import url("/public/css/mybazar-fonts.css");
+@import url("/css/mybazar-fonts.css");
 @import "base";
 
 @import "2-layouts/mmenu";
