--- a/resources/sass/catalog-page.scss
+++ b/resources/sass/catalog-page.scss
@@ -4,7 +4,7 @@
 
 @import "0-plugins/plugins-index";
 @import "0-plugins/range-slider";
-@import url("/public/css/mybazar-fonts.css");
+@import url("/css/mybazar-fonts.css");
 @import "base";
 
 @import "2-layouts/mmenu";
