--- a/public/css/index.css
+++ b/public/css/index.css
@@ -8,6 +8,15 @@
           box-sizing: border-box;
 }
 
+.outter-brands-body .pn-ProductNav_Wrapper {
+  width: 100%;
+  padding: 0;
+}
+
+.outter-brands-body .pn-ProductNav_Wrapper .pn-ProductNav_Contents {
+  padding: 10px 0;
+}
+
 .pn-ProductNav {
   /* Make this scrollable when needed */
   overflow-x: auto;
@@ -136,11 +145,17 @@
   .pn-ProductNav_Wrapper {
     width: 83%;
   }
+  .outter-brands-body .pn-ProductNav_Wrapper {
+    width: 100%;
+  }
 }
 
 @media all and (max-width: 980px) {
   .pn-ProductNav_Wrapper {
     width: 80%;
+  }
+  .outter-brands-body .pn-ProductNav_Wrapper {
+    width: 100%;
   }
 }
 
@@ -154,6 +169,127 @@
   font-family: 'cerapro-regular';
   src: url("../fonts/cerapro-regular.ttf");
   font-weight: normal;
+}
+
+@-webkit-keyframes loader {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  25% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+  50% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+  75% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes loader {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  25% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+  50% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+  75% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes loader-inner {
+  0% {
+    height: 0%;
+  }
+  25% {
+    height: 0%;
+  }
+  50% {
+    height: 100%;
+  }
+  75% {
+    height: 100%;
+  }
+  100% {
+    height: 0%;
+  }
+}
+
+@keyframes loader-inner {
+  0% {
+    height: 0%;
+  }
+  25% {
+    height: 0%;
+  }
+  50% {
+    height: 100%;
+  }
+  75% {
+    height: 100%;
+  }
+  100% {
+    height: 0%;
+  }
+}
+
+.wrapper-loader {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  z-index: 99;
+  top: 0;
+  left: 0;
+  background-color: #07108f;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.wrapper-loader .loader {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  position: relative;
+  top: 0%;
+  border: 4px solid #Fff;
+  -webkit-animation: loader 2s infinite ease;
+          animation: loader 2s infinite ease;
+}
+
+.wrapper-loader .loader .loader-inner {
+  vertical-align: top;
+  display: inline-block;
+  width: 100%;
+  background-color: #fff;
+  -webkit-animation: loader-inner 2s infinite ease-in;
+          animation: loader-inner 2s infinite ease-in;
 }
 
 body {
