--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,3 +1,28 @@
+// GLOBAL VARIABLES
+$font_cerapro:'';
+$title_color:#07108f;
+$link_hover_color:#d1d8e0;
+$menu_dropdown_color:#242954;
+$menu_arrow_color:#eaedf1;
+$menu_box_shadow:#e9eaeb;
+$stars_color:#ffc621;
+$comment_color:#a4b0be;
+$product_info_icons_color:#1d3553;
+
+$bg_grey_color:#f1f2f6;
+$bg_grey_color2:#f6f7f9;
+$bg_discount:#11da53;
+$bg_footer:#101b2a;
+$bg_new_item:#ff0000;
+$bg_like_heart:#f42c48;
+$bg_dropdown_hover:#ecf0f4;
+
+
+$item_price_color:#0042ff;
+$item_title_color:#0b2546;
+$item_border_color:#dfe4ea;
+
+
 // Body
 $body-bg: #f8fafc;
 
@@ -17,3 +42,4 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
