--- a/public/css/index.css
+++ b/public/css/index.css
@@ -351,6 +351,10 @@ h4.title {
   background: #f1f2f6;
 }
 
+.h4-title.video-blog {
+  padding: 0.5% 10%;
+}
+
 h5.title {
   color: white;
   font-size: 30px;
