video blog page not found

--- a/resources/sass/2-layouts/_video-blog-body.scss
+++ b/resources/sass/2-layouts/_video-blog-body.scss
@@ -1,14 +1,14 @@
 .outter-list-of-videos{
-    form.big-filter{
+    // form.big-filter{
 
-    }
+    // }
     .wrapper-filtered-videos{
         nav{
-            button.navbar-toggler{
-                i{
+            // button.navbar-toggler{
+            //     i{
 
-                }
-            }
+            //     }
+            // }
             div#search-bar.search-bar{
                 width:100%;
                 height:45px;
@@ -31,21 +31,22 @@
                     }
                 }
             }
-            .collapse.navbarNavDropdown{
-                form.small-filter{
+        //     .collapse.navbarNavDropdown{
+        //         form.small-filter{
 
-                }
-            }
-        }
-        .all-filtered-videos{
-            .video-item{
-                iframe{
+        //         }
+        //     }
+        // }
+        // .all-filtered-videos{
+        //     .video-item{
+        //         iframe{
 
-                }
-            }
-        }
-        nav.products-pagination{
+        //         }
+        //     }
+        // }
+        // nav.products-pagination{
 
+        // }
         }
     }
 }
