--- a/public/css/brands.css
+++ b/public/css/brands.css
@@ -170,127 +170,6 @@
   font-weight: normal;
 }
 
-@-webkit-keyframes loader {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  25% {
-    -webkit-transform: rotate(180deg);
-            transform: rotate(180deg);
-  }
-  50% {
-    -webkit-transform: rotate(180deg);
-            transform: rotate(180deg);
-  }
-  75% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-}
-
-@keyframes loader {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  25% {
-    -webkit-transform: rotate(180deg);
-            transform: rotate(180deg);
-  }
-  50% {
-    -webkit-transform: rotate(180deg);
-            transform: rotate(180deg);
-  }
-  75% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-}
-
-@-webkit-keyframes loader-inner {
-  0% {
-    height: 0%;
-  }
-  25% {
-    height: 0%;
-  }
-  50% {
-    height: 100%;
-  }
-  75% {
-    height: 100%;
-  }
-  100% {
-    height: 0%;
-  }
-}
-
-@keyframes loader-inner {
-  0% {
-    height: 0%;
-  }
-  25% {
-    height: 0%;
-  }
-  50% {
-    height: 100%;
-  }
-  75% {
-    height: 100%;
-  }
-  100% {
-    height: 0%;
-  }
-}
-
-.wrapper-loader {
-  width: 100%;
-  height: 100vh;
-  position: fixed;
-  z-index: 99;
-  top: 0;
-  left: 0;
-  background-color: #07108f;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.wrapper-loader .loader {
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  position: relative;
-  top: 0%;
-  border: 4px solid #Fff;
-  -webkit-animation: loader 2s infinite ease;
-          animation: loader 2s infinite ease;
-}
-
-.wrapper-loader .loader .loader-inner {
-  vertical-align: top;
-  display: inline-block;
-  width: 100%;
-  background-color: #fff;
-  -webkit-animation: loader-inner 2s infinite ease-in;
-          animation: loader-inner 2s infinite ease-in;
-}
-
 body {
   font-family: 'cerapro-regular';
   background: #ffffff;
@@ -1276,6 +1155,10 @@ nav#menu .mm-navbar__title span {
           align-items: center;
   border: 1px solid #d1d8e0;
   border-radius: 23px;
+}
+
+.main-header div.search-bar:focus {
+  border-color: red !important;
 }
 
 .main-header div.search-bar input {
