--- a/resources/sass/2-layouts/_slide-banner.scss
+++ b/resources/sass/2-layouts/_slide-banner.scss
@@ -16,18 +16,31 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+.slide-banner-shopv{
+    width:80%;
+    height:200px;
+    margin:1%  auto 2%;
+    background:url('../images/shop-view-slide-banner.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 .slide-banner-brand-view{
     .h4-title{
         padding:0.5% 10%;
     }
 }
 @media all and (max-width:1522px){
-    .slide-banner{
+    .slide-banner-catalog,
+    .slide-banner-brandv,
+    .slide-banner-shopv{
         width:84%;
     }
 }
 @media all and (max-width:1400px){
-    .slide-banner{
+    .slide-banner,
+    .slide-banner-brandv,
+    .slide-banner-shopv{
         width:90%;
     }
 }
