--- a/public/css/shop-view.css
+++ b/public/css/shop-view.css
@@ -2432,17 +2432,89 @@ img.menu-auto-icon:hover {
   }
 }
 
-.new-popular-recommended-btn {
-  height: 65px;
-  background: #f1f2f6;
+#products-of-day {
   width: 100%;
+  height: 335px;
   padding: 0 10%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: white;
+  margin-top: 30px;
+}
+
+#products-of-day .product-item {
+  padding: 10px 20px;
+  width: 100%;
+  height: 300px;
+  margin: 0 10px;
+  border: 2px solid #07108f;
+  border-radius: 0;
+  background: #f1f2f6;
+}
+
+#products-of-day .product-item:last-child {
+  margin-right: 0;
+}
+
+#products-of-day .product-item:first-child {
+  margin-left: 0;
+}
+
+#products-of-day .product-item .top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+#products-of-day .product-item .top h5 {
+  font-size: 20px;
+  color: #0042ff;
+}
+
+#products-of-day .product-item .top .time {
+  color: #07108f;
+  font-size: 20px;
+}
+
+#products-of-day .product-item .top .time span {
+  display: inline-block;
+}
+
+#products-of-day .product-item .top .time .day:after, #products-of-day .product-item .top .time .hour:after {
+  content: ":";
+  color: #07108f;
+  margin: 0 1px;
+}
+
+#products-of-day .product-item .product-info {
+  height: 88%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-flow: row;
@@ -2452,21 +2524,209 @@ img.menu-auto-icon:hover {
           align-items: center;
 }
 
-.new-popular-recommended-btn button {
-  padding: 15px 30px;
-  color: #07108f;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 18px;
-  border: none;
-  border-radius: 23px;
-  background: transparent;
-  margin: 0 10px 0 0;
+#products-of-day .product-item .product-info .product-image {
+  min-width: 180px;
+  height: 100%;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.new-popular-recommended-btn button.active {
-  background: #0042ff;
-  color: white;
+#products-of-day .product-item .product-info .product-image img {
+  width: auto;
+  height: auto;
+}
+
+#products-of-day .product-item .product-info .product-image span.sale {
+  position: absolute;
+  left: -5%;
+  bottom: 0;
+}
+
+#products-of-day .product-item .product-info .description {
+  width: 55%;
+  padding: 0 0 0 2%;
+  height: 100%;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  text-align: start;
+}
+
+#products-of-day .product-item .product-info .description .rate {
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+#products-of-day .owl-theme .owl-nav.disabled + .owl-dots {
+  display: none;
+}
+
+@media all and (max-width: 1665px) {
+  #products-of-day .product-item .top h5 {
+    font-size: 18px;
+  }
+  #products-of-day .product-item .top .time {
+    font-size: 18px;
+  }
+  #products-of-day .product-item .product-info .product-image img {
+    height: 85%;
+  }
+}
+
+@media all and (max-width: 1522px) {
+  #products-of-day {
+    padding: 0 8%;
+  }
+}
+
+@media all and (max-width: 1400px) {
+  #products-of-day {
+    padding: 0 5%;
+  }
+  #products-of-day .product-item .product-info .description {
+    width: 50%;
+  }
+}
+
+@media all and (max-width: 1320px) {
+  #products-of-day {
+    padding: 0 5%;
+  }
+  #products-of-day .rate {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
+
+@media all and (max-width: 1250px) {
+  #products-of-day {
+    height: 350px;
+  }
+  #products-of-day .product-item {
+    width: 100%;
+  }
+  #products-of-day .product-item .product-info .description {
+    width: 57%;
+  }
+  #products-of-day .product-item .product-info .description .rate {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row;
+            flex-flow: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  #products-of-day .product-item .product-info .product-image img {
+    height: 100%;
+  }
+  #products-of-day .owl-dots {
+    display: block;
+    top: -10px;
+    right: 65px;
+  }
+}
+
+@media all and (max-width: 1000px) {
+  #products-of-day {
+    width: 60%;
+    padding: 0;
+    margin: 30px auto 0px;
+  }
+  #products-of-day .product-item .top h5, #products-of-day .product-item .top .time {
+    font-size: 22px;
+  }
+  #products-of-day .owl-dots {
+    right: 30px;
+  }
+}
+
+@media all and (max-width: 800px) {
+  #products-of-day {
+    width: 70%;
+  }
+}
+
+@media all and (max-width: 600px) {
+  #products-of-day {
+    width: 80%;
+  }
+  #products-of-day .product-item {
+    width: 100%;
+  }
+  #products-of-day .product-item .top h5, #products-of-day .product-item .top .time {
+    font-size: 20px;
+  }
+  #products-of-day .product-item .product-info .product-image img {
+    height: 90%;
+  }
+  #products-of-day .product-item .product-info .description .rate {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+  }
+  .owl-dots {
+    right: 20px;
+  }
+}
+
+@media all and (max-width: 500px) {
+  #products-of-day {
+    width: 90%;
+  }
+  #products-of-day .product-item {
+    width: 100%;
+  }
+  #products-of-day .product-item .product-info .product-image img {
+    height: 80%;
+  }
+  #products-of-day .owl-dots {
+    right: 10px;
+  }
+}
+
+@media all and (max-width: 400px) {
+  #products-of-day .product-item .top .time {
+    display: none;
+  }
+  #products-of-day .product-item .product-info .product-image {
+    width: 100%;
+  }
+  #products-of-day .product-item .product-info .description {
+    display: none;
+  }
 }
 
 .outter-catalog-view, .outter-brand-view-body {
@@ -3718,102 +3978,6 @@ img.menu-auto-icon:hover {
   }
   .comment {
     font-size: 18px;
-  }
-}
-
-.full-banner1 {
-  width: 80%;
-  padding: 0 4%;
-  margin: 1% auto;
-  height: 200px;
-  color: white;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  background: url("../images/fullbanner1.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row;
-          flex-flow: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.full-banner2 {
-  width: 80%;
-  padding: 0 4%;
-  margin: 1% auto;
-  height: 200px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  color: white;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  background: url("../images/fullbanner2.jpg");
-}
-
-.catalog-banner {
-  width: 100%;
-  padding: 0 5%;
-  height: 370px;
-  margin: 2% 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  color: white;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  background: url("../images/catalog-view-banner.png");
-}
-
-@media all and (max-width: 1000px) {
-  .full-banner1, .full-banner2 {
-    padding: 0 3%;
-  }
-  .full-banner1 h5.title, .full-banner2 h5.title {
-    font-size: 20px !important;
-  }
-}
-
-@media all and (max-width: 700px) {
-  .full-banner1 .right {
-    display: none;
   }
 }
 
