--- a/resources/sass/2-layouts/_blog-body.scss
+++ b/resources/sass/2-layouts/_blog-body.scss
@@ -1,4 +1,4 @@
-.outter-list-of-videos{
+.outter-list-of-blogs{
     min-height:500px;
     width:80%;
     padding:1% 0;
@@ -88,7 +88,7 @@
             }
         }
     }
-    .wrapper-filtered-videos{
+    .wrapper-filtered-blogs{
         width:80%;
         min-height:1000px;
         @include displayFlex(flex-start, column, flex-start);
@@ -181,26 +181,70 @@
                 }
             }
         }
-        .all-filtered-videos{
-            .video-item{
-                position:relative;
+        .all-filtered-blogs{
+            @include displayFlex(flex-start, column, flex-start);
+            a{
+                width:100%; 
+                margin:1% 0;
                 &:hover{
-                    .image-overlay{
-                        opacity: 0;
-                        transition:.4s ease-in-out;
+                    cursor:pointer;
+                    transition:.4s ease-in-out;
+                    @include box-shadow(0px, 2px, 7px, -5px, black);
+                    .blog-item{
+                        .description{
+                            transition:.4s ease-in-out;
+                            background-color:white;
+                        }
+                        .image{
+                            .image-overlay{
+                            transition:.4s ease-in-out;
+                                opacity:0;
+                            }
+                        }
                     }
                 }
-                .image-overlay{
+                .blog-item{
+                    height:175px;
+                    @include displayFlex(flex-start, row, center);
                     width:100%;
+                    .image{
+                        width:40%;
+                        height:175px;
+                        position: relative;
+                        img{
+                            width:100%;
+                            height:100%;
+                        }
+                        .image-overlay{
+                            width:100%;
+                            height:175px;
+                            position:absolute;
+                            top:0;
+                            left:0;
+                            opacity:0.7;
+                            background-color:#2449c5;
+                        }
+                    }
+                }
+                .description{
+                    background-color:$bg_grey_color;
+                    width:60%;
                     height:100%;
-                    position:absolute;
-                    top:0;
-                    left:0;
-                    opacity:0.7;
-                    background-color:#2449c5;
+                    text-align: start;
+                    padding:0 2%;
+                    color:$item_title_color;
+                    @include displayFlex(center, column, flex-start);
+                    h6.title{
+                        font-weight:bold;
+                        font-size:22px;
+                        margin-bottom:2%;
+                    }
+                    p{
+                        font-size:18px;
+                    }
                 }
             }
+            
         }
     }
 }
-
