--- a/resources/sass/2-layouts/_catalog-view.scss
+++ b/resources/sass/2-layouts/_catalog-view.scss
@@ -1,3 +1,6 @@
+.h4-title.catalog-view{
+    padding:0.5% 10%;
+}
 .outter-catalog-view, .outter-brand-view-body{
     min-height:1000px;
     width:80%;
