--- a/resources/sass/2-layouts/_newones-popular_p-recommended.scss
+++ b/resources/sass/2-layouts/_newones-popular_p-recommended.scss
@@ -1,4 +1,4 @@
-.newone{
+.recommended, .popular-products, .newone{
     width:100%;
     height:700px;
     background:white;
@@ -12,7 +12,7 @@
     }
 }
 @media all and (max-width:1250px){
-    .newone{
+    .recommended, .popular-products, .newone{
         .rate{
             width:100%;
         }
