--- a/resources/sass/catalog-section.scss
+++ b/resources/sass/catalog-section.scss
@@ -10,17 +10,17 @@
 @import "2-layouts/top-header";
 @import "2-layouts/main-header";
 @import "2-layouts/nav-header";
-@import "2-layouts/carousel-index";
+@import "2-layouts/slide-banner";
 
-@import "2-layouts/newones-popular_p-recommended";
-@import "2-layouts/product-of-day";
+@import "2-layouts/catalog-view";
+@import "2-layouts/catalog-section-filter-part";
+@import "2-layouts/full-banner";
 @import "2-layouts/price-rating-comments";
-@import "2-layouts/threesmallbanners";
 
 @import "2-layouts/shops";
-@import "2-layouts/full-banner";
-@import "2-layouts/blogs";
+
 @import "2-layouts/top-brands";
-@import "2-layouts/videos";
+@import "2-layouts/newones-popular_p-recommended";
+
 @import "2-layouts/news-letter";
 @import "2-layouts/footer";
